--- a/pom.xml
+++ b/pom.xml
@@ -20,9 +20,9 @@
   <!-- 版本管理 -->
   <properties>
     <junit.version>4.12</junit.version>
-    <spring.version>4.1.3.RELEASE</spring.version>
-    <mybatis.version>3.2.8</mybatis.version>
-
+    <spring.version>2.1.6.RELEASE</spring.version>
+    <mybatis.version>2.0.1</mybatis.version>
+    <druid.version>1.1.18</druid.version>
   </properties>
 
 </project>
