--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
     <spring.version>2.1.6.RELEASE</spring.version>
     <mybatis.version>2.0.1</mybatis.version>
     <druid.version>1.1.18</druid.version>
+    <mysql.version>8.0.16</mysql.version>
   </properties>
 
 </project>
