添加user版本号

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
     <junit.version>4.12</junit.version>
     <spring.version>2.1.6.RELEASE</spring.version>
     <mybatis.version>2.0.1</mybatis.version>
+    <user.version>3.4</user.version>
   </properties>
 
 </project>
